Fix Environment error alignement

--- a/openmole/gui/server/org.openmole.gui.server.core/src/main/resources/webapp/css/style.css
+++ b/openmole/gui/server/org.openmole.gui.server.core/src/main/resources/webapp/css/style.css
@@ -1061,9 +1061,8 @@ padding-bottom: 90px;
   background-color: #373f46;
   color: white;
   padding: 10px;
-  margin-right:1px;
-  margin-top:1px;
   min-height: 77px;
+  min-width: 80px;
 }
 
 .statusBlockNoColor,
